# otus-07

./: .gitignore  Bulk.cpp  Bulk.h  CMakeLists.txt  main.cpp
.github/workflows/: main.yml
